--- a/reddeer_presentation.tex
+++ b/reddeer_presentation.tex
@@ -330,14 +330,16 @@ public class ServerPresentTest {
 \subsection{Projects which uses RedDeer}
 \begin{frame}[fragile]
 \frametitle{JBoss Tools Projects}
-\begin{itemize}
-\item Fuse Tooling \newline
-  https://github.com/jbosstools/jbosstools-fuse
-\item JBoss Tools Integration Tests \newline
-  https://github.com/jbosstools/jbosstools-integration-tests
-\item JBoss Tools Integration Stack Tests \newline
-  https://github.com/jbosstools/jbosstools-integration-stack-tests
-\end{itemize}
+Fuse Tooling \newline
+\url{https://github.com/jbosstools/jbosstools-fuse}
+
+\vspace{0.5cm}
+JBoss Tools Integration Tests \newline
+\url{https://github.com/jbosstools/jbosstools-integration-tests}
+
+\vspace{0.5cm}
+JBoss Tools Integration Stack Tests \newline
+\url{https://github.com/jbosstools/jbosstools-integration-stack-tests}
 \end{frame}
 
 \section{Evaluate the session}
